fix gnuradio cmake install folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,7 +95,7 @@ if(NOT CMAKE_MODULES_DIR)
 endif(NOT CMAKE_MODULES_DIR)
 
 set(GR_INCLUDE_DIR      include/bluetooth)
-set(GR_CMAKE_DIR        ${CMAKE_MODULES_DIR}/bluetooth)
+set(GR_CMAKE_DIR        ${CMAKE_MODULES_DIR}/gnuradio-bluetooth)
 set(GR_PKG_DATA_DIR     ${GR_DATA_DIR}/${CMAKE_PROJECT_NAME})
 set(GR_PKG_DOC_DIR      ${GR_DOC_DIR}/${CMAKE_PROJECT_NAME})
 set(GR_PKG_CONF_DIR     ${GR_CONF_DIR}/${CMAKE_PROJECT_NAME}/conf.d)
@@ -163,6 +163,6 @@ add_subdirectory(grc)
 # Install cmake search helper for this library
 ########################################################################
 
-install(FILES cmake/Modules/bluetoothConfig.cmake
-    DESTINATION ${CMAKE_MODULES_DIR}/bluetooth
+install(FILES cmake/Modules/gnuradio-bluetoothConfig.cmake
+    DESTINATION ${CMAKE_MODULES_DIR}/gnuradio-bluetooth
 )
